tests/specs/run/import_common_js/module_error.out
error: Uncaught (in promise) ReferenceError: module is not defined
module.exports = {
^
    at [WILDCARD]module_error.js:1:1

    info: Deno supports CommonJS modules in .cjs files, or when there's a package.json
          with "type": "commonjs" option and --unstable-detect-cjs flag is used.
    hint: Rewrite this module to ESM,
          or change the file extension to .cjs,
          or add package.json next to the file with "type": "commonjs" option
          and pass --unstable-detect-cjs flag.
    docs: https://docs.deno.com/go/commonjs
